[package]
name = "tandem-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm.workspace = true
base64ct.workspace = true
chrono.workspace = true
nvim-oxi.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
parking_lot.workspace = true
uuid.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
log.workspace = true
log4rs.workspace = true
log-panics.workspace = true
loro.workspace = true
rand.workspace = true
serde_bytes.workspace = true
url.workspace = true
