[package]
name = "tandem-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tandem-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
log.workspace = true
loro.workspace = true
serde.workspace = true
env_logger.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
serde_bytes.workspace = true
uuid.workspace = true
